# openz

./: CONTRIBUTING.md  Cargo.toml  README.md  agents-guide.md  prompt.txt
.cargo/: config.toml
crates/zeroclaw-api/src/: tool.rs
crates/zeroclaw-config/src/: lib.rs  schema.rs
crates/zeroclaw-config/src/platform/: mod.rs  ssh.rs
crates/zeroclaw-gateway/src/: api.rs  lib.rs
crates/zeroclaw-log/src/: event.rs  lib.rs  reader.rs  writer.rs
crates/zeroclaw-mcp-bridge/: Cargo.toml
crates/zeroclaw-mcp-bridge/src/: main.rs
crates/zeroclaw-memory/src/: lib.rs
crates/zeroclaw-plugins/: Cargo.toml
crates/zeroclaw-plugins/src/: runtime.rs  wasm_tool.rs
crates/zeroclaw-runtime/: Cargo.toml
crates/zeroclaw-runtime/src/: lib.rs
crates/zeroclaw-runtime/src/agent/: agent.rs  agentz.rs  loop_.rs  mcp_server.rs  mod.rs  system_prompt.rs  tool_execution.rs  tui.rs  tui_events.rs
crates/zeroclaw-tools/: Cargo.toml
crates/zeroclaw-tools/src/: attribution.rs  cdp_browser.rs  codebase_snapshot.rs  fs_event_monitor.rs  git_native.rs  glob_search.rs  lib.rs  mcp_client.rs  mcp_deferred.rs  model_routing_config.rs  os_input.rs  screenshot.rs  sys_info.rs  tool_search.rs  web_parse.rs
docs/book/src/: SUMMARY.md
skills/anonymous-file-upload/: SKILL.md
skills/file-tracker/: SKILL.md
skills/get-crypto-price/: SKILL.md
skills/static-assets-hosting/: SKILL.md
src/: lib.rs  main.rs
src/hands/: mod.rs
src/tui/: app.rs  events.rs  layout.rs  mod.rs  spinner.rs  state.rs
src/tui/widgets/: chat.rs  input.rs  mod.rs  sidebar.rs  status_bar.rs
(+9 files in other folders)
