[package]
name = "zeroclaw-mcp-bridge"
version = "0.8.0-beta-1"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.22", features = ["v4", "std"] }
directories = "6.0"

